<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_wifi"
            android:icon="@drawable/ic_wifi_black_24dp"
            android:title="@string/Wifi" />
        <item
            android:id="@+id/nav_edit"
            android:icon="@drawable/ic_edit_black_24dp"
            android:title="@string/Edit" />
        <item
            android:id="@+id/nav_advertise"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Advertise" />
        <item
            android:id="@+id/nav_coupon"
            android:icon="@drawable/ic_shop_black_24dp"
            android:title="@string/Coupons" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Tools" />

    </group>

    <item
        android:id="@+id/Communicate"
        android:title="@string/Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/Share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback_black_24dp"
                android:title="@string/Feedback" />
        </menu>
    </item>

</menu>
