<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signupActivity"
    tools:layout_editor_absoluteY="81dp">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/signup_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:text="@string/signup"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="60sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="106dp" />

            <TextView
                android:id="@+id/name_label_signup"
                style="@style/label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="102dp" />

            <EditText
                android:id="@+id/name_input_signup"
                style="@style/input_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:maxLength="35"
                android:textCursorDrawable="@android:color/transparent"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="126dp" />

            <TextView
                android:id="@+id/email_label_signup"
                style="@style/label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="176dp" />

            <EditText
                android:id="@+id/email_input_signup"
                style="@style/input_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="@android:color/black"
                android:ems="10"
                android:hint="@string/email_input"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:maxLength="35"
                android:textCursorDrawable="@android:color/transparent"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="200dp" />

            <TextView
                android:id="@+id/password_label_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="258dp"
                tools:style="@style/label_style" />

            <EditText
                android:id="@+id/password_input_signup"
                style="@style/input_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:backgroundTint="@android:color/black"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/password_label"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:maxLength="35"
                android:textCursorDrawable="@android:color/transparent"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="282dp" />

            <TextView
                android:id="@+id/birthdate_label_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/birthdate"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="341dp"
                tools:style="@style/label_style" />

            <CalendarView
                android:id="@+id/birthdate_input_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/gender_label_signup"
                style="@style/label_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="426dp" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/gender_array"
                android:prompt="@string/gender_prompt"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="450dp"
                tools:style="@style/input_style" />

            <TextView
                android:id="@+id/phone_label_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Phone"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="493dp"
                tools:style="@style/label_style" />

            <EditText
                android:id="@+id/phone_input_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Phone"
                android:inputType="phone"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="517dp" />

            <TextView
                android:id="@+id/category_label_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Category"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="578dp"
                tools:style="@style/label_style" />

            <EditText
                android:id="@+id/category_input_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Category"
                android:inputType="text"
                tools:layout_editor_absoluteX="50dp"
                tools:layout_editor_absoluteY="602dp" />

            <Button
                android:id="@+id/button_signup"
                style="@style/button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSignup"
                android:text="@string/signup"
                app:layout_constraintCircleRadius="15dp"
                tools:layout_editor_absoluteX="167dp"
                tools:layout_editor_absoluteY="675dp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/postResponse_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>