<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/login_header"
        android:layout_width="152dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="129dp"
        android:layout_marginBottom="45dp"
        android:width="200dp"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email_label_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/email_label_login"
        style="@style/label_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="219dp"
        android:layout_marginBottom="5dp"
        android:text="@string/email_label"
        app:layout_constraintBottom_toTopOf="@+id/email_input_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:style="@style/label_style" />

    <EditText
        android:id="@+id/email_input_login"
        style="@style/input_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="46dp"
        android:width="200dp"
        android:backgroundTint="@android:color/black"
        android:ems="10"
        android:hint="@string/email_input"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLength="35"
        android:textCursorDrawable="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/password_label_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/password_label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="225dp"
        android:layout_marginBottom="5dp"
        android:text="@string/password_label"
        app:layout_constraintBottom_toTopOf="@+id/password_input_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:style="@style/label_style" />

    <EditText
        android:id="@+id/password_input_login"
        style="@style/input_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="54dp"
        android:width="200dp"
        android:backgroundTint="@android:color/black"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/password_label"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:maxLength="35"
        android:textCursorDrawable="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <TextView
        android:id="@+id/label_not_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="62dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="112dp"
        android:text="@string/dont_have_account"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signup"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_login"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="55dp"
        android:onClick="onLogin"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/signup"
        app:layout_constraintCircleRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="112dp"
        android:onClick="onSignup"
        android:text="@string/signup"
        android:textColor="#598dfc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_not_user" />

</android.support.constraint.ConstraintLayout>